--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "optimus789",
     "license": "MIT",
     "dependencies": {
+        "@apollo/client": "^3.5.10",
         "@supercharge/strings": "^1.24.0",
         "@textile/tableland": "^0.1.2",
         "axios": "^0.24.0",
